--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-sm topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
