--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-sm topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
