--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <title> G-ASSOCIATES</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/web1.css">
-    <link rel="stylesheet" href="css/sup.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/newg3%20(3).PNG">
-
     <script src="bootstrap/js/jquery-3.6.0.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
@@ -21,7 +18,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -104,11 +101,11 @@
         <li><img src="data1/images/hd7.jpg" alt="" title="G-Associates is here to offer you quality and reliable services" id="wows1_4"/></li>
     </ul></div>
     <div class="ws_bullets"><div>
-        <a href="#" title=""><span><img src="data1/tooltips/hd20.jpg" alt=""/>1</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd21.jpg" alt=" "/>2</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd22.png" alt=" "/>3</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd25.jpg" alt=" "/>4</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd7.jpg" alt=" "/>5</span></a>
+        <a href="#" title=""><span><img src="data1/tooltips/hd20.jpg" alt="" />1</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd21.jpg" alt=" " />2</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd22.png" alt=" " />3</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd25.jpg" alt=" " />4</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd7.jpg" alt=" " />5</span></a>
     </div></div>
     <div class="ws_shadow"></div>
 </div>
@@ -194,13 +191,35 @@
 
 
 
-<div class="ic">
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-linkedin"></a>
-    <a href="#" class="fa fa-google"></a>
+<div class="social">
+    <div class="wrapper ">
+        <a href="https://www.facebook.com/ilari.bett">
+            <div class="buttoni " >
+                <div class="icon"><i class="fab fa-facebook-f"></i></div>
+                <span class="f">Facebook</span>
+            </div>
+        </a>
+        <a href="https://twitter.com/LariesBett">
+            <div class="buttoni">
+                <div class="icon"><i class="fab fa-twitter"></i></div>
+                <span class="t">Twitter</span>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/lariesbett8/">
+            <div class="buttoni">
+                <div class="icon"><i class="fab fa-instagram"></i></div>
+                <span class="i">Instagram</span>
+            </div>
+        </a>
+        <a href="https://www.linkedin.com/in/hillary-bett-992b331b4/">
+            <div class="buttoni">
+                <div class="icon"><i class="fab fa-linkedin"></i></div>
+                <span class="l">LinkedIn</span>
+            </div>
+        </a>
 
+
+    </div>
 </div>
 <div class="copyright">
 <h8>Copyright &copy; 2021 g-associates.</h8>
