--- a/index.html
+++ b/index.html
@@ -117,28 +117,34 @@
     <h2>G-Associates is here to offer you quality services</h2>
 </div>
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
-<div class="text-justify " id="more">
+<div class="text-justify " id="more"><br><br>
+<h4>
     <p>G-Associates is a Kenyan campany that provides reliable and proffesional
         events and ceremonial related services  but not limited to technical solutions.
-    Our service emphasises on your satisfaction.
-         </p>
+        Our service emphasises on your satisfaction.
+    </p>
+
     <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
         and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
-
-    <h4>VISION</h4>
-    <p>To become a leading social and tech providing campany in East Africa </p>
-    <h4>MISSION</h4>
-    <p>To provide quality and reliable services</p>
-    <h4>OPERATING PRINCIPLES</h4>
-    <H6>Shared Vision</H6>
-  <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
-  <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
+</h4>
+    <h1>VISION</h1>
+    <h4><p>To become a leading social and tech providing campany in East Africa </p></h4>
+    <h1>MISSION</h1>
+   <h4> <p>To provide quality and reliable services</p></h4>
+    <h1>OPERATING PRINCIPLES</h1>
+    <H2>Shared Vision</H2>
+    <h4>
+        <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
+        <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
+    </h4>
     <br>
-    <h6>Quality results</h6>
-    <li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+    <h2>Quality results</h2>
+    <h4><li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+    </h4>
     <br>
-    <h6>Integrity</h6>
-    <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
+    <h2>Integrity</h2>
+   <h4> <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
+   </h4>
     <br>
 </div>
 
@@ -181,7 +187,7 @@
     <div class="contact btn">
         <a href="contactUs.html"> <h2>CONTACT US</h2></a>
     </div>
-    <br>
+    <br> <br> <br>
     <h4>Privacy Policy Terms and Conditions</h4>
 
 
