--- a/about.html
+++ b/about.html
@@ -83,80 +83,82 @@
 <div class="spacetaker">
 
 </div>
-
 <div class="about">
     <h1><b>ABOUT US</b></h1>
     <h2>G-Associates is here to offer you quality services</h2>
 </div>
-
-
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
-<div class="text-justify " id="more">
+    <div class="text-justify " id="more"><br><br>
+        <h4>
+            <p>G-Associates is a Kenyan campany that provides reliable and proffesional
+                events and ceremonial related services  but not limited to technical solutions.
+                Our service emphasises on your satisfaction.
+            </p>
 
-    <p class="pa">G-Associates is a Kenyan campany that provides reliable and proffesional
-        events and ceremonial related services  but not limited to technical solutions.
-        Our service emphasises on your satisfaction.
-        We believe that our most effective services are rooted in genuine customer insight and empathy.
-    </p>
-
-    <h2 class="he">VISION</h2>
-    <p class="pa">To become a leading social and tech providing campany in East Africa </p>
-    <h2 class="he">MISSION</h2>
-    <p class="pa">To provide quality and reliable services</p>
-    <h2 class="he">OPERATING PRINCIPLES</h2>
-    <H4>Shared Vision</H4>
-    <li class="pa">  The G-Associates campany vision, mission and operating principles guide our work with partners and our interaction .</li>
-    <li class="pa">   We respect cultural differences and adapt  our work to the communities we serve.</li>
-    <br>
-    <h4>Quality results</h4>
-    <li class="pa">We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
-    <br>
-    <h4>Integrity</h4>
-    <li class="pa">We honor our promises and resolve conflicts through direct and courteous communication</li>
-    <br>
-</div>
-
-
-
-
-<div class="container">
-
-    <div class="row" id="rowa">
-        <div class="col-sm-6 col1">
-            <button data-toggle="collapse" data-target="#menu" class="btn btn-success b1">Products $ Services</button>
-            <div id="menu" class="collapse ps">
-                <a class="dropdown-item" href="photography.html" ><b>Photography</b></a>
-                <a class="dropdown-item" href="videoshooting.html"><b>Event Video Shooting and Editting</b></a>
-                <a class="dropdown-item" href="planning&catering.html"><b>Event Planning and catering services</b></a>
-                <a class="dropdown-item" href="docoration.html"><b>Event decoration services</b></a>
-                <a class="dropdown-item" href="publicAdd.html"><b>Public Address Systems for Hire</b> </a>
-                <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col2">
-            <button data-toggle="collapse" data-target="#menu2" class="btn btn-success b2"  >New Tech Solutions</button>
-            <div id="menu2" class="collapse ps">
-                <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
-                <a class="dropdown-item" href="solar.html"><b>Solar Installation Services</b></a>
-                <a class="dropdown-item" href="epp.html"><b>Electrical, plumbing and painting works</b></a>
-                <a class="dropdown-item" href="ict.html" ><b>ICT Security Solutions  : </b></a>
-                <ul  class="sec" >
-                    <li><a href="ip%20surveillance.html">IP Surveillance Systems</a></li>
-                    <li><a href="burglary%20and%20emergency%20system.html">Burglary $ Emergency Systems</a></li>
-                </ul>
-            </div>
-        </div>
+            <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
+                and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
+        </h4>
+        <h1>VISION</h1>
+        <h4><p>To become a leading social and tech providing campany in East Africa </p></h4>
+        <h1>MISSION</h1>
+        <h4> <p>To provide quality and reliable services</p></h4>
+        <h1>OPERATING PRINCIPLES</h1>
+        <H2>Shared Vision</H2>
+        <h4>
+            <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
+            <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
+        </h4>
+        <br>
+        <h2>Quality results</h2>
+        <h4><li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+        </h4>
+        <br>
+        <h2>Integrity</h2>
+        <h4> <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
+        </h4>
+        <br>
     </div>
 
-</div>
-</div>
 
+
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col-sm-6 col1">
+                <button data-toggle="collapse" data-target="#menu" class="btn btn-success b1">Products $ Services</button>
+                <div id="menu" class="collapse ps">
+                    <a class="dropdown-item" href="photography.html" ><b>Photography</b></a>
+                    <a class="dropdown-item" href="videoshooting.html"><b>Event Video Shooting and Editting</b></a>
+                    <a class="dropdown-item" href="planning&catering.html"><b>Event Planning and catering services</b></a>
+                    <a class="dropdown-item" href="docoration.html"><b>Event decoration</b></a>
+                    <a class="dropdown-item" href="publicAdd.html"><b>Public Address Systems for Hire</b> </a>
+                    <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
+                </div>
+            </div>
+
+            <div class="col-sm-6 col2">
+                <button data-toggle="collapse" data-target="#menu2" class="btn btn-success b2"  >New Tech Solutions</button>
+                <div id="menu2" class="collapse ps">
+                    <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
+                    <a class="dropdown-item" href="solar.html"><b>Solar Installation Services</b></a>
+                    <a class="dropdown-item" href="epp.html"><b>Electrical, plumbing and painting works</b></a>
+                    <a class="dropdown-item" href="ict.html" ><b>ICT Security Solutions  : </b></a>
+                    <ul  class="sec" >
+                        <li><a href="ip%20surveillance.html">IP Surveillance Systems</a></li>
+                        <li><a href="burglary%20and%20emergency%20system.html">Burglary $ Emergency Systems</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 <div class="contactUs">
     <div class="contact btn">
-        <a href="contactUs.html"><h2>CONTACT US</h2></a>
+        <a href="contactUs.html"> <h2>CONTACT US</h2></a>
     </div>
-    <br>
+    <br> <br> <br>
     <h4>Privacy Policy Terms and Conditions</h4>
 
 
@@ -165,11 +167,15 @@
 </div>
 
 
+
+<div class="social">
+
+
+</div>
 <div class="copyright">
     <h4>Copyright &copy; 2021 g-associates.</h4>
     <br>
     <h4>All rights reserved.</h4>
 </div>
-
 </body>
 </html>
