--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
     </div>
 
 </nav>
-
+<div class="spacetaker"></div>
 
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
     <div class="ws_images"><ul>
-        <li><img src="data1/images/hd20.jpg" alt="" title="" id="wows1_0" class="textt"/><h1>G-ASSOCIATES </h1><br>
+        <li><img src="data1/images/hd20.jpg" alt="" title="" id="wows1_0" class="textt"/><h2>G-ASSOCIATES </h2><br>
             <h2>Welcome to G-Associates where impossibility has solutions</h2></li>
-        <li><img src="data1/images/hd21.jpg" alt="" title=" " id="wows1_1" class="textt"/><h1 class="ken">KENYA'S LEADING SERVICE PROVIDING COMPANY</h1>
+        <li><img src="data1/images/hd21.jpg" alt="" title=" " id="wows1_1" class="textt"/><h2 class="ken">KENYA'S LEADING SERVICE PROVIDING COMPANY</h2>
             <br>
             <h2 class="ken"> Be a champion of G-Associates by visiting us.</h2></li>
         <li><img src="data1/images/hd22.png" alt="" title="" id="wows1_2" class="textt"/><h2>G-Associates is here to offer you quality and reliable services</h2></li>
