--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
     <div class="ws_images"><ul>
-        <li><img src="data1/images/hd20.jpg" alt="" title="G-ASSOCIATES " id="wows1_0" class="textt"/>Welcome to G-Associates where impossibility has a solution</li>
-        <li><img src="data1/images/hd21.jpg" alt="" title="KENYA'S LEADING SERVICE PROVIDING COMPANY " id="wows1_1" class="textt"/> Be a champion of G-Associates by visiting us.</li>
-        <li><img src="data1/images/hd22.png" alt="" title="G-Associates is here to offer you quality and reliable services" id="wows1_2" class="textt"/></li>
-        <li><img src="data1/images/hd25.jpg" alt="" title=""  id="wows1_3"/> We are determined to provide quality work based on
-            rigorous evaluation and concideration of new ideas.</li>
-        <li><img src="data1/images/hd7.jpg" alt="" title="G-Associates is here to offer you quality and reliable services" id="wows1_4"/></li>
+        <li><img src="data1/images/hd20.jpg" alt="" title=" " id="wows1_0" class="textt"/><h1 class="bg-info">G-ASSOCIATES</h1><br> <h2>Welcome to G-Associates where impossibility has a solution</h2></li>
+        <li><img src="data1/images/hd21.jpg" alt="" title=" " id="wows1_1" class="textt"/> <h1 class="ken">KENYA'S LEADING SERVICE PROVIDING COMPANY</h1>
+            <br> <h2 class="ken">Be a champion of G-Associates by visiting us.</h2></li>
+        <li><img src="data1/images/hd22.png" alt="" title="" id="wows1_2" class="textt"/><h1>G-Associates is here to offer you quality and reliable services</h1></li>
+        <li><img src="data1/images/hd25.jpg" alt="" title=""  id="wows1_3"/> <h1>We are determined to provide quality work based on
+            <br>
+            rigorous evaluation and concideration of new ideas.</h1></li>
+        <li><img src="data1/images/hd7.jpg" alt="" title="" id="wows1_4"/><h1>G-Associates is here to offer you quality and reliable services</h1></li>
     </ul></div>
     <div class="ws_bullets"><div>
         <a href="#" title=""><span><img src="data1/tooltips/hd20.jpg" alt=""/>1</span></a>
