--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
     <div class="ws_images"><ul>
-        <li><img src="data1/images/hd20.jpg" alt="" title=" " id="wows1_0" class="textt"/><h1 class="bg-info">G-ASSOCIATES</h1><br> <h2>Welcome to G-Associates where impossibility has a solution</h2></li>
+        <li><img src="data1/images/hd20.jpg" alt="" title=" " id="wows1_0" class="textt"/><h1 class="bg-info">G-ASSOCIATES</h1><br>
+            <h2>Welcome to G-Associates where impossibility has a solution</h2></li>
         <li><img src="data1/images/hd21.jpg" alt="" title=" " id="wows1_1" class="textt"/> <h1 class="ken">KENYA'S LEADING SERVICE PROVIDING COMPANY</h1>
             <br> <h2 class="ken">Be a champion of G-Associates by visiting us.</h2></li>
         <li><img src="data1/images/hd22.png" alt="" title="" id="wows1_2" class="textt"/><h1>G-Associates is here to offer you quality and reliable services</h1></li>
@@ -112,37 +113,42 @@
 <script type="text/javascript" src="engine1/wowslider.js"></script>
 <script type="text/javascript" src="engine1/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
+
 <div class="about">
-<h2><b>ABOUT US</b></h2>
-    <h4>G-Associates is here to offer you quality services</h4>
+    <h1><b>ABOUT US</b></h1>
+    <h2>G-Associates is here to offer you quality services</h2>
 </div>
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
-<div class="text-justify " id="more">
-    <p>G-Associates is a Kenyan campany that provides reliable and proffesional
-        events and ceremonial related services  but not limited to technical solutions.
-    Our service emphasises on your satisfaction.
-         </p>
-    <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
-        and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
+    <div class="text-justify " id="more"><br><br>
+        <h4>
+            <p>G-Associates is a Kenyan campany that provides reliable and proffesional
+                events and ceremonial related services  but not limited to technical solutions.
+                Our service emphasises on your satisfaction.
+            </p>
 
-    <h4>VISION</h4>
-    <p>To become a leading social and tech providing campany in East Africa </p>
-    <h4>MISSION</h4>
-    <p>To provide quality and reliable services</p>
-    <h4>OPERATING PRINCIPLES</h4>
-    <H6>Shared Vision</H6>
-  <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
-  <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
-    <br>
-    <h6>Quality results</h6>
-    <li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
-    <br>
-    <h6>Integrity</h6>
-    <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
-    <br>
-</div>
-
-
+            <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
+                and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
+        </h4>
+        <h1>VISION</h1>
+        <h4><p>To become a leading social and tech providing campany in East Africa </p></h4>
+        <h1>MISSION</h1>
+        <h4> <p>To provide quality and reliable services</p></h4>
+        <h1>OPERATING PRINCIPLES</h1>
+        <H2>Shared Vision</H2>
+        <h4>
+            <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
+            <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
+        </h4>
+        <br>
+        <h2>Quality results</h2>
+        <h4><li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+        </h4>
+        <br>
+        <h2>Integrity</h2>
+        <h4> <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
+        </h4>
+        <br>
+    </div>
 
 
 <div class="container">
