--- a/contactUs.html
+++ b/contactUs.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -85,7 +85,7 @@
 
 <div class="spacetaker"></div>
 <div class="container">
-    <h1>Contact Us</h1>
+    <h2>Contact Us</h2>
     <hr>
     <div class="forms">
         <form action="mailto:lariesbett8@gmail.com" class="contacts">
@@ -112,9 +112,9 @@
         <div class="logo">
             <img src="images/kipk.PNG" alt="">
             <hr>
-            <center><h2>G-ASSOCIATES</h2><br></center>
-            <h2>Email: <a href="mailto:lariesbett8@gmail.com"> admin@g_associates.ac.ke</a></h2><br>
-            <h2>Website: <a href="http://www.laries.com"> www.g_associates.ac.ke</a></h2>
+            <center><h4>G-ASSOCIATES</h4><br></center>
+            <h4>Email: <a href="mailto:lariesbett8@gmail.com"> admin@g_associates.ac.ke</a></h4><br>
+            <h4>Website: <a href="http://www.laries.com"> www.g_associates.ac.ke</a></h4>
             <br><br><br>
           <div class="icons2">
               <ul>
@@ -139,9 +139,9 @@
 </div>
 <br>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 
 
