--- a/docoration.html
+++ b/docoration.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h1 class="h">G altimate decoration</h1>
+        <h2 class="h">G altimate decoration</h2>
         <p>
             We offer a comprehensive range of services personalized to meet the vision and budget of any client.
             We expertly design and execute every event detail, assuring our client and their
@@ -96,7 +96,7 @@
 </div>
 
 <div>
-    <h1 class="h">Our sevice covers</h1>
+    <h2 class="h">Our sevice covers</h2>
     <li>linen</li>
     <li>center pieces</li>
     <li>king and queen chairs</li>
@@ -106,9 +106,9 @@
 </div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 
 </body>
