--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title> G-ASSOCIATES</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/web1.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="images/newg3%20(3).PNG">
     <script src="bootstrap/js/jquery-3.6.0.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
@@ -19,7 +18,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-sm topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -89,67 +88,61 @@
     </div>
 
 </nav>
+
+
 <!-- Start WOWSlider.com BODY section --> <!-- add to the <body> of your page -->
 <div id="wowslider-container1">
     <div class="ws_images"><ul>
-        <li><img src="data1/images/hd20.jpg" alt="" title=" " id="wows1_0" class="textt"/><h1 class="bg-info">G-ASSOCIATES</h1><br>
-            <h2>Welcome to G-Associates where impossibility has a solution</h2></li>
-        <li><img src="data1/images/hd21.jpg" alt="" title=" " id="wows1_1" class="textt"/> <h1 class="ken">KENYA'S LEADING SERVICE PROVIDING COMPANY</h1>
-            <br> <h2 class="ken">Be a champion of G-Associates by visiting us.</h2></li>
-        <li><img src="data1/images/hd22.png" alt="" title="" id="wows1_2" class="textt"/><h1>G-Associates is here to offer you quality and reliable services</h1></li>
-        <li><img src="data1/images/hd25.jpg" alt="" title=""  id="wows1_3"/> <h1>We are determined to provide quality work based on
-            <br>
-            rigorous evaluation and concideration of new ideas.</h1></li>
-        <li><img src="data1/images/hd7.jpg" alt="" title="" id="wows1_4"/><h1>G-Associates is here to offer you quality and reliable services</h1></li>
+        <li><img src="data1/images/hd20.jpg" alt="" title="G-ASSOCIATES " id="wows1_0" class="textt"/>Welcome to G-Associates where impossibility has a solution</li>
+        <li><img src="data1/images/hd21.jpg" alt="" title="KENYA'S LEADING SERVICE PROVIDING COMPANY " id="wows1_1" class="textt"/> Be a champion of G-Associates by visiting us.</li>
+        <li><img src="data1/images/hd22.png" alt="" title="G-Associates is here to offer you quality and reliable services" id="wows1_2" class="textt"/></li>
+        <li><img src="data1/images/hd25.jpg" alt="" title=""  id="wows1_3"/> We are determined to provide quality work based on
+            rigorous evaluation and concideration of new ideas.</li>
+        <li><img src="data1/images/hd7.jpg" alt="" title="G-Associates is here to offer you quality and reliable services" id="wows1_4"/></li>
     </ul></div>
     <div class="ws_bullets"><div>
-        <a href="#" title=""><span><img src="data1/tooltips/hd20.jpg" alt=""/>1</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd21.jpg" alt=" "/>2</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd22.png" alt=" "/>3</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd25.jpg" alt=" "/>4</span></a>
-        <a href="#" title=" "><span><img src="data1/tooltips/hd7.jpg" alt=" "/>5</span></a>
+        <a href="#" title=""><span><img src="data1/tooltips/hd20.jpg" alt="" />1</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd21.jpg" alt=" " />2</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd22.png" alt=" " />3</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd25.jpg" alt=" " />4</span></a>
+        <a href="#" title=" "><span><img src="data1/tooltips/hd7.jpg" alt=" " />5</span></a>
     </div></div>
     <div class="ws_shadow"></div>
 </div>
 <script type="text/javascript" src="engine1/wowslider.js"></script>
 <script type="text/javascript" src="engine1/script.js"></script>
 <!-- End WOWSlider.com BODY section -->
-
 <div class="about">
-    <h1><b>ABOUT US</b></h1>
-    <h2>G-Associates is here to offer you quality services</h2>
+<h2><b>ABOUT US</b></h2>
+    <h4>G-Associates is here to offer you quality services</h4>
 </div>
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
-    <div class="text-justify " id="more"><br><br>
-        <h4>
-            <p>G-Associates is a Kenyan campany that provides reliable and proffesional
-                events and ceremonial related services  but not limited to technical solutions.
-                Our service emphasises on your satisfaction.
-            </p>
+<div class="text-justify " id="more">
+    <p>G-Associates is a Kenyan campany that provides reliable and proffesional
+        events and ceremonial related services  but not limited to technical solutions.
+    Our service emphasises on your satisfaction.
+         </p>
+    <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
+        and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
 
-            <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
-                and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
-        </h4>
-        <h1>VISION</h1>
-        <h4><p>To become a leading social and tech providing campany in East Africa </p></h4>
-        <h1>MISSION</h1>
-        <h4> <p>To provide quality and reliable services</p></h4>
-        <h1>OPERATING PRINCIPLES</h1>
-        <H2>Shared Vision</H2>
-        <h4>
-            <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
-            <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
-        </h4>
-        <br>
-        <h2>Quality results</h2>
-        <h4><li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
-        </h4>
-        <br>
-        <h2>Integrity</h2>
-        <h4> <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
-        </h4>
-        <br>
-    </div>
+    <h4>VISION</h4>
+    <p>To become a leading social and tech providing campany in East Africa </p>
+    <h4>MISSION</h4>
+    <p>To provide quality and reliable services</p>
+    <h4>OPERATING PRINCIPLES</h4>
+    <H6>Shared Vision</H6>
+  <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
+  <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
+    <br>
+    <h6>Quality results</h6>
+    <li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+    <br>
+    <h6>Integrity</h6>
+    <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
+    <br>
+</div>
+
+
 
 
 <div class="container">
@@ -199,10 +192,7 @@
 
 
 <div class="social">
-    <a href="#" class="fa fa-facebook"></a>
-    <a href="#" class="fa fa-twitter"></a>
-    <a href="#" class="fa fa-instagram"></a>
-    <a href="#" class="fa fa-linkedin"></a>
+
 
 </div>
 <div class="copyright">
