--- a/planning&catering.html
+++ b/planning&catering.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -86,7 +86,7 @@
 
     <div class="col-sm-4">
 
-    <h2 class="h">G-Event planning and catering services</h2>
+    <h4 class="h">G-Event planning and catering services</h4>
         <p>We specialise in catering for corporate lunches, events, weddings, contract
             catering and private functions in Kenya, and bring a
             taste and best experience , committed to excellent, service delivery, and we
@@ -99,9 +99,9 @@
 
 
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </div>
 </body>
