--- a/wfi$lan port.html
+++ b/wfi$lan port.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">G-Wifi installers</h2>
+        <h4 class="h">G-Wifi installers</h4>
         <p>We offer wifi installation services for small, medium or large businesses all over Kenya..</p>
 
         <p>We not only offer wifi installation for large corporates or businesses, we also cater for
@@ -99,9 +99,9 @@
 </div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </body>
 </html>
