--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -47,7 +47,7 @@
                     <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
 
                     <div class="drop" >
-                        <h2 class="newtech"> <u>New Tech Solutions</u></h2>
+                        <h4 class="newtech"> <u>New Tech Solutions</u></h4>
 
 
                         <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
@@ -114,9 +114,9 @@
      </div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </body>
 </html>
