--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -83,99 +83,93 @@
 <div class="spacetaker">
 
 </div>
+
 <div class="about">
-    <h1><b>ABOUT US</b></h1>
-    <h2>G-Associates is here to offer you quality services</h2>
+    <h2><b>ABOUT US</b></h2>
+    <h4>G-Associates is here to offer you quality services</h4>
 </div>
+
+
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
-    <div class="text-justify " id="more"><br><br>
-        <h4>
-            <p>G-Associates is a Kenyan campany that provides reliable and proffesional
-                events and ceremonial related services  but not limited to technical solutions.
-                Our service emphasises on your satisfaction.
-            </p>
+<div class="text-justify " id="more">
 
-            <p>Our business is built on an exceptional level of technical expertise, industry knowledge,
-                and quality of workmanship.  We deliver cost-effective services with a fast turnaround and delivery.</p>
-        </h4>
-        <h1>VISION</h1>
-        <h4><p>To become a leading social and tech providing campany in East Africa </p></h4>
-        <h1>MISSION</h1>
-        <h4> <p>To provide quality and reliable services</p></h4>
-        <h1>OPERATING PRINCIPLES</h1>
-        <H2>Shared Vision</H2>
-        <h4>
-            <li>  The G-Associates company vision, mission and operating principles guide our work with partners and our interaction .</li>
-            <li>   We respect cultural differences and adapt  our work to the communities we serve.</li>
-        </h4>
-        <br>
-        <h2>Quality results</h2>
-        <h4><li>We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
-        </h4>
-        <br>
-        <h2>Integrity</h2>
-        <h4> <li>We honor our promises and resolve conflicts through direct and courteous communication</li>
-        </h4>
-        <br>
-    </div>
+    <p class="pa">G-Associates is a Kenyan campany that provides reliable and proffesional
+        events and ceremonial related services  but not limited to technical solutions.
+        Our service emphasises on your satisfaction.
+        We believe that our most effective services are rooted in genuine customer insight and empathy.
+    </p>
+
+    <h4 class="he">VISION</h4>
+    <p class="pa">To become a leading social and tech providing campany in East Africa </p>
+    <h4 class="he">MISSION</h4>
+    <p class="pa">To provide quality and reliable services</p>
+    <h4 class="he">OPERATING PRINCIPLES</h4>
+    <H6>Shared Vision</H6>
+    <li class="pa">  The G-Associates campany vision, mission and operating principles guide our work with partners and our interaction .</li>
+    <li class="pa">   We respect cultural differences and adapt  our work to the communities we serve.</li>
+    <br>
+    <h6>Quality results</h6>
+    <li class="pa">We are determined to provide quality work based on rigorous evaluation and concideration of new ideas.</li>
+    <br>
+    <h6>Integrity</h6>
+    <li class="pa">We honor our promises and resolve conflicts through direct and courteous communication</li>
+    <br>
+</div>
 
 
 
 
-    <div class="container">
+<div class="container">
 
-        <div class="row">
-            <div class="col-sm-6 col1">
-                <button data-toggle="collapse" data-target="#menu" class="btn btn-success b1">Products $ Services</button>
-                <div id="menu" class="collapse ps">
-                    <a class="dropdown-item" href="photography.html" ><b>Photography</b></a>
-                    <a class="dropdown-item" href="videoshooting.html"><b>Event Video Shooting and Editting</b></a>
-                    <a class="dropdown-item" href="planning&catering.html"><b>Event Planning and catering services</b></a>
-                    <a class="dropdown-item" href="docoration.html"><b>Event decoration</b></a>
-                    <a class="dropdown-item" href="publicAdd.html"><b>Public Address Systems for Hire</b> </a>
-                    <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
-                </div>
-            </div>
-
-            <div class="col-sm-6 col2">
-                <button data-toggle="collapse" data-target="#menu2" class="btn btn-success b2"  >New Tech Solutions</button>
-                <div id="menu2" class="collapse ps">
-                    <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
-                    <a class="dropdown-item" href="solar.html"><b>Solar Installation Services</b></a>
-                    <a class="dropdown-item" href="epp.html"><b>Electrical, plumbing and painting works</b></a>
-                    <a class="dropdown-item" href="ict.html" ><b>ICT Security Solutions  : </b></a>
-                    <ul  class="sec" >
-                        <li><a href="ip%20surveillance.html">IP Surveillance Systems</a></li>
-                        <li><a href="burglary%20and%20emergency%20system.html">Burglary $ Emergency Systems</a></li>
-                    </ul>
-                </div>
+    <div class="row" id="rowa">
+        <div class="col-sm-6 col1">
+            <button data-toggle="collapse" data-target="#menu" class="btn btn-success b1">Products $ Services</button>
+            <div id="menu" class="collapse ps">
+                <a class="dropdown-item" href="photography.html" ><b>Photography</b></a>
+                <a class="dropdown-item" href="videoshooting.html"><b>Event Video Shooting and Editting</b></a>
+                <a class="dropdown-item" href="planning&catering.html"><b>Event Planning and catering services</b></a>
+                <a class="dropdown-item" href="docoration.html"><b>Event decoration services</b></a>
+                <a class="dropdown-item" href="publicAdd.html"><b>Public Address Systems for Hire</b> </a>
+                <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
             </div>
         </div>
 
+        <div class="col-sm-6 col2">
+            <button data-toggle="collapse" data-target="#menu2" class="btn btn-success b2"  >New Tech Solutions</button>
+            <div id="menu2" class="collapse ps">
+                <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
+                <a class="dropdown-item" href="solar.html"><b>Solar Installation Services</b></a>
+                <a class="dropdown-item" href="epp.html"><b>Electrical, plumbing and painting works</b></a>
+                <a class="dropdown-item" href="ict.html" ><b>ICT Security Solutions  : </b></a>
+                <ul  class="sec" >
+                    <li><a href="ip%20surveillance.html">IP Surveillance Systems</a></li>
+                    <li><a href="burglary%20and%20emergency%20system.html">Burglary $ Emergency Systems</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+
 </div>
+</div>
+
 <div class="contactUs">
     <div class="contact btn">
-        <a href="contactUs.html"> <h2>CONTACT US</h2></a>
+        <a href="contactUs.html"><h4>CONTACT US</h4></a>
     </div>
-    <br> <br> <br>
-    <h4>Privacy Policy Terms and Conditions</h4>
-
-
-
-
-</div>
-
-
-
-<div class="social">
-
-
-</div>
-<div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>Privacy Policy Terms and Conditions</h8>
+
+
+
+
 </div>
+
+
+<div class="copyright">
+    <h8>Copyright &copy; 2021 g-associates.</h8>
+    <br>
+    <h8>All rights reserved.</h8>
+</div>
+
 </body>
 </html>
