--- a/epp.html
+++ b/epp.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -84,16 +84,16 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">Electrical, painting & plumbing works</h2>
+        <h4 class="h">Electrical, painting & plumbing works</h4>
         <img src="images/paint1.jpg" alt=""></div>
     <div class="col-sm-4"><img src="images/elect1.jpg" alt="" width="350px" height="300px"></div>
     <div class="col-sm-4"><img src="images/plumping.jpg" alt="" width="350px" height="300px"></div>
 </div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </body>
 </html>
