--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -92,7 +92,7 @@
     <div class="col-sm-3"><img src="images/Daima/baco%20(3).jpeg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(3).png" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(4).jpeg" alt=""  height="150px"></div>
-    <div class="col-sm-3"><img src="images/Daima/baco%20(4).jpg" alt=""  height="150px" width="200px"></div>
+    <div class="col-sm-3"><img src="images/Daima/baco%20(4).jpg" alt=""  height="150px"></div>
 </div>
 <div class="row">
     <div class="col-sm-3"><img src=images/Daima/baco%20(7).jpeg alt=""  height="150px"></div>
@@ -110,7 +110,7 @@
     <div class="col-sm-3"><img src="images/Daima/baco%20(11).jpg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(11).jpeg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(12).jpeg" alt=""  height="150px"></div>
-    <div class="col-sm-3"><img src="images/Daima/baco%20(12).jpg" alt=""  height="150px" width="200"></div>
+    <div class="col-sm-3"><img src="images/Daima/baco%20(12).jpg" alt=""  height="150px"></div>
 </div>
 <div class="row">
     <div class="col-sm-3"><img src="images/Daima/baco%20(13).jpeg" alt=""  height="150px"></div>
@@ -122,7 +122,7 @@
     <div class="col-sm-3"><img src="images/Daima/baco%20(15).jpeg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(15).jpg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(16).jpeg" alt=""  height="150px"></div>
-    <div class="col-sm-3"><img src="images/Daima/baco%20(16).jpg" alt=""  height="150px" width="200"></div>
+    <div class="col-sm-3"><img src="images/Daima/baco%20(16).jpg" alt=""  height="150px"></div>
 </div>
 <div class="row">
     <div class="col-sm-3"><img src="images/Daima/baco%20(17).jpeg" alt=""  height="150px"></div>
@@ -170,12 +170,12 @@
     <div class="col-sm-3"><img src="images/Daima/baco%20(41).jpg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(42).jpg" alt=""  height="150px"></div>
     <div class="col-sm-3"><img src="images/Daima/baco%20(44).jpg" alt=""  height="150px"></div>
-    <div class="col-sm-3"><img src="images/Daima/baco%20(45).jpg" alt=""  height="150px" width="200"></div>
+    <div class="col-sm-3"><img src="images/Daima/baco%20(45).jpg" alt=""  height="150px"></div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </body>
 </html>
