--- a/ict.html
+++ b/ict.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -83,7 +83,7 @@
 <div class="image" style="background-image: url('images/ipbackground.jpg') " >
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">G IP surveillance systems installation</h2>
+        <h4 class="h">G IP surveillance systems installation</h4>
         <p>At G-Associates, we’re passionate about helping our customers meet their security needs.
             We listen to our customers and make the right recommendations based on their specific requirements. </p>
     </div>
@@ -105,9 +105,9 @@
 
         Call us now on 0700373370</p></div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </div>
 </body>
