--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">G-QUALITY PHOTOGRAPHY</h2>
+        <h4 class="h">G-QUALITY PHOTOGRAPHY</h4>
         <p>The G-Associates Photography team are specialist conference and corporate event photographers in Kenya.
             Through our range of professional photography services, we make sure that each
             of our clients receives the highest quality experience.
@@ -95,9 +95,9 @@
     <div class="col-sm-4"><img src="images/pho2.jpg" alt="" width="350px" height="300px"></div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </div>
 </body>
