--- a/solar.html
+++ b/solar.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">G Solar installers</h2>
+        <h4 class="h">G Solar installers</h4>
         <p>We have been supplying quality solar products, service and advice to our clients,
             we can help you with all of your solar energy needs. If you are looking for solar panels, solar
             batteries, water heaters or other solar related products,
@@ -94,9 +94,9 @@
     <div class="col-sm-4"><img src="images/solar3.jpg" alt="" width="350px" height="300px"></div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 </div>
 </div>
 </body>
