--- a/videoshooting.html
+++ b/videoshooting.html
@@ -11,7 +11,7 @@
     <script src="bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-md topMenu navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg topMenu navbar-dark fixed-top">
     <!-- Brand -->
     <a class="navbar-brand" href="#"><img src="images/newg3%20(3).PNG" alt="" width=209 height="98"></a>
     <!-- Toggler/collapsible Button -->
@@ -45,7 +45,7 @@
                     <a class="dropdown-item" href="tents.html"><b>Tents for Hire(seats included)</b></a>
 
                     <div class="drop" >
-                        <h2 class="newtech"> <u>New Tech Solutions</u></h2>
+                        <h4 class="newtech"> <u>New Tech Solutions</u></h4>
 
 
                         <a class="dropdown-item" href="wfi$lan%20port.html" ><b>Wifi installation services</b></a>
@@ -84,7 +84,7 @@
 
 <div class="row">
     <div class="col-sm-4">
-        <h2 class="h">G-QUALITY VIDEO SHOOTING $ EDITTING</h2>
+        <h4 class="h">G-QUALITY VIDEO SHOOTING $ EDITTING</h4>
         <p>We have been filming events for over a decade
             and have become specialists in using minimal crew to maximum effect.
 
@@ -95,7 +95,7 @@
     <div class="col-sm-4"><img src="images/vid3.jpg" alt="" width="350px" height="300px"></div>
     <div class="col-sm-4"><img src="images/vidshoot.jpg" alt="" width="350px" height="300px"></div>
 </div>
-    <h2>G video shooting team specializes on event video shooting but not limited to:</h2>
+    <h6>G video shooting team specializes on event video shooting but not limited to:</h6>
 <div class="row">
     <div class="col-sm-3">
         <li>Award Ceremony Videos</li>
@@ -110,9 +110,9 @@
 </div>
 </div>
 <div class="copyright">
-    <h4>Copyright &copy; 2021 g-associates.</h4>
+    <h8>Copyright &copy; 2021 g-associates.</h8>
     <br>
-    <h4>All rights reserved.</h4>
+    <h8>All rights reserved.</h8>
 
 </div>
 
